# backup-rotate

./: .gitignore  LICENSE  README  README.md  backup-rotate.cabal  backup-rotate.hs
src/: BackupRotate.hs  Logger.hs  backup-rotate.hs
src/BackupRotate/: Errors.hs  Logger.hs  Main.hs  Types.hs
