name:                backup-rotate
version:             0.1
stability:           unstable
description:         Simple rotation for hourly/daily/weekly or custom backups
category:            System
homepage:            http://github.com/JLimperg/backup-rotate
license:             MIT
license-file:        LICENSE
author:              Jannis Limperg
maintainer:          jannis@limperg.de
build-type:          Simple
cabal-version:       >= 1.16

executable backup-rotate
  default-language:  Haskell2010
  main-is:           backup-rotate.hs
  hs-source-dirs:    src
  build-depends:     base             >= 4        && <= 5
                   , bytestring       >= 0.10.0.0 && <= 1
                   , containers       >= 0.5.0.0  && <= 1
                   , directory        >= 1.2.0.0  && <= 2
                   , filepath         >= 1.3.0.1  && <= 2
                   , hslogger         >= 1.2.1    && <= 2
                   , old-locale       >= 1.0.0.4  && <= 2
                   , pcre-light       >= 0.4      && <= 1
                   , pcre-light-extra >= 0.0.0    && <= 1
                   , time             >= 1.4.0.1  && <= 2
